# plugins

./: .gitignore  CMakeLists.txt  README.md
node_info/: CMakeLists.txt
node_info/include/foas/plugins/node_info/: NodeInfo.h
node_info/src/node_info/: NodeInfo.cpp
